--- a/CefNet.Avalonia/CefNet.Avalonia.csproj
+++ b/CefNet.Avalonia/CefNet.Avalonia.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="0.9.12" />
+    <PackageReference Include="Avalonia" Version="0.10.0-preview2" />
   </ItemGroup>
 
   <ItemGroup>
