--- a/CefGen/CefGen.csproj
+++ b/CefGen/CefGen.csproj
@@ -3,15 +3,19 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <LangVersion1>9.0</LangVersion1>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CppAst" Version="0.6.0">
-      <ExcludeAssets Condition="$([MSBuild]::IsOSPlatform(OSX))">native</ExcludeAssets>
-    </PackageReference>
-    <PackageReference Condition="$([MSBuild]::IsOSPlatform(OSX))" Include="libclang.runtime.osx-x64" Version="10.0.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="3.3.1" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.3.1" />
+    <Compile Remove="VS16_8_FIX.cs" Condition="$(MSBuildVersion.StartsWith('16.8.')) != 'TRUE'" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CppAst" Version="0.8.0-alpha-001" />
+    <PackageReference Include="libClangSharp.runtime.$(NETCoreSdkRuntimeIdentifier)" Version="10.0.0-beta1" />
+    <PackageReference Include="libclang.runtime.$(NETCoreSdkRuntimeIdentifier)" Version="10.0.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="3.8.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.8.0" />
   </ItemGroup>
 
   <ItemGroup>
