Linux: fix CefGen build issue.
On Linux, a specified runtime is required for clang-dependencies.
For example: CefGen>$ dotnet run -r ubuntu.18.04-x64

--- a/CefGen/CefGen.csproj
+++ b/CefGen/CefGen.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <LangVersion1>9.0</LangVersion1>
+    <RuntimeIdentifier Condition="'$(RuntimeIdentifier)' == ''">$(NETCoreSdkRuntimeIdentifier)</RuntimeIdentifier>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,8 +13,8 @@
 
   <ItemGroup>
     <PackageReference Include="CppAst" Version="0.8.0-alpha-001" />
-    <PackageReference Include="libClangSharp.runtime.$(NETCoreSdkRuntimeIdentifier)" Version="10.0.0-beta1" />
-    <PackageReference Include="libclang.runtime.$(NETCoreSdkRuntimeIdentifier)" Version="10.0.0" />
+    <PackageReference Include="libClangSharp.runtime.$(RuntimeIdentifier)" Version="10.0.0-beta1" />
+    <PackageReference Include="libclang.runtime.$(RuntimeIdentifier)" Version="10.0.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="3.8.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.8.0" />
   </ItemGroup>
