Remove the AnyCPU configuration from solution.

--- a/WinFormsCoreApp/WinFormsCoreApp.csproj
+++ b/WinFormsCoreApp/WinFormsCoreApp.csproj
@@ -5,8 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Platforms>AnyCPU;x86;x64</Platforms>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <Platforms>x86;x64</Platforms>
   </PropertyGroup>
 
   <PropertyGroup>
